# CV-Generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/agent-memory/backend-api-developer/: MEMORY.md  project_pipeline_plan.md
.claude/agent-memory/frontend-ui-designer/: MEMORY.md  project_frontend_state.md
.claude/agent-memory/software-architect/: MEMORY.md  project_overview.md
.claude/agents/: backend-api-developer.md  frontend-ui-designer.md  software-architect.md
spec/: 00_implementacion_nucleo_comparativa.md  01_backend_fases_implementacion.md  02_frontend_fases_implementacion.md  03_security_review.md
src/api/: router.py
src/api/endpoints/: comparativa.py  cv.py
src/config/: .env.example  settings.py
src/schemas/: comparativa.py
src/services/: comparativa.py  cv_generator.py
src/utils/: cv_llm.py  llm.py  reader.py
src/web/: index.html
src/web/templates/: clasico.html  moderno.html
