[project]
name = "cv-generator"
version = "0.1.0"
description = "Servicio de comparativa entre oferta laboral y mis habilidades. Generación de CV incluida."
authors = [
    {name = "th3-butl3r",email = "github-outsider.unknowing582@passinbox.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.47.0,<0.48.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[dependency-groups]
dev = [
    "pudb (>=2025.1.5,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
