[project]
name = "cv-generator"
version = "0.1.0"
description = "Servicio de comparativa entre oferta laboral y mis habilidades. Generación de CV incluida."
authors = [
    {name = "th3-butl3r",email = "github-outsider.unknowing582@passinbox.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.47.0,<0.48.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=2.38.0,<3.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
]

[dependency-groups]
dev = [
    "pudb (>=2025.1.5,<2026.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
